# recursive-capacity-model

./: .clang-format  .gitignore  CMakeLists.txt  License.md  Notes.md  README.md  Results.md
src/: BatteryModel.h  BatteryModel.tpp  CMakeLists.txt  CapacityResults.md  ResistanceResults.md  VoltageResults.md  main.cpp
src/BatteryModels/: BatteryModelBase.h  DirectBatteryModel.h  DirectBatteryModel.tpp  StateBasedBatteryModel.h  StateBasedBatteryModel.tpp
src/CapacityEstimation/: CapacityEstimatorBase.h  RlsCapacityEstimator.h  RlsCapacityEstimator.tpp
src/EcmStateEstimation/: ECMModelEvaluator._cpp  ECMModelEvaluator._h  EcmStateEstimator.h  Rls2EcmStateEstimator.h  Rls2EcmStateEstimator.tpp
src/OcvEstimation/: OcvEstimator.h  Rls1EcmOcvEstimator.h  Rls1EcmOcvEstimator.tpp
src/OcvToSoc/: OcvToSocBase.h  OcvToSocOptimizer.h  OcvToSocOptimizer.tpp  Results.md  SplineOcvToSoc.h  SplineOcvToSoc.tpp
src/Optimization/: BayesianOptimize.h  BayesianOptimize.tpp
src/SocEstimation/: EkfSocEstimator.cpp  EkfSocEstimator.h  SocEstimator.cpp  SocEstimator.h
src/SocToOcv/: ExpLsSocToOcv.cpp  ExpLsSocToOcv.h  LogExpOcvToSocCurve.cpp  LogExpOcvToSocCurve.h  LogNegPolyLsSocToOcv.cpp  LogNegPolyLsSocToOcv.h  LogPolyLsSocToOcv.cpp  LogPolyLsSocToOcv.h  LogSplineSocToOcv.h  LogSplineSocToOcv.tpp  LogisticSplineSocToOcv.h  LogisticSplineSocToOcv.tpp  LookUpTableSocToOcv.cpp  LookUpTableSocToOcv.h  NegPolyLsSocToOcv.cpp  NegPolyLsSocToOcv.h  PolyLsSocToOcv.cpp  (+9 more)
tests/: CMakeLists.txt
tests/algorithms/: LeastSquares.cpp  extendedKalmanFilter.cpp  recursiveLeastSquares.cpp  timeFrequencyConverter.cpp
tests/loading/: processNasaCycles.cpp
(+146 files in other folders)
